--- a/index.html
+++ b/index.html
@@ -8,17 +8,35 @@
 <script type="text/javascript" src="js/demo.js"></script>
 <pre>
     LDX #$00
-loop
+print
+    LDA hello,X
+    STA $FF
     INX
-    CPX #$FF
-    BNE loop
-    LDY #$05
+    CMP #$00
+    BNE print
 
-hexdump: a2 00 e8 e0 ff d0 fb a0 05
+hello
+    .byte 72
+    .byte 69
+    .byte 76
+    .byte 76
+    .byte 32
+    .byte 87
+    .byte 79
+    .byte 82
+    .byte 76
+    .byte 68
+    .byte 0
+
+hexdump: 
+A2 00 BD 0D 00 8D FF 00
+E8 C9 00 D0 F5 48 45 4C
+4C 20 57 4F 52 4C 44 00
 </pre>
-<input type="button" value="load" onclick="CPU6502.burn([0xa2, 0x00, 0xe8, 0xe0 ,0xff, 0xd0, 0xfb, 0xa0, 0x05], 0);"><br>
+<input type="button" value="load" onclick="CPU6502.burn([0xA2, 0x00, 0xBD, 0x0D, 0x00, 0x8D, 0xFF, 0x00, 0xE8, 0xC9, 0x00, 0xD0, 0xF5, 0x00, 0x48, 0x45, 0x4C, 0x4C, 0x20, 0x57, 0x4F, 0x52, 0x4C, 0x44, 0x00], 0);"><br>
 <input type="button" value="run" onclick="CPU6502.run();"><br>
 <input type="button" value="reset" onclick="CPU6502.reset();"><br>
+<input type="checkbox" onclick="CheckDebugMode(this);" /><br>
 <pre id='registers'></pre>
 </body>
 </html>
