--- a/index.html
+++ b/index.html
@@ -7,36 +7,13 @@
 <script type="text/javascript" src="js/6502-cpu.js"></script>
 <script type="text/javascript" src="js/demo.js"></script>
 <pre>
-    LDX #$00
-print
-    LDA hello,X
-    STA $FF
-    INX
-    CMP #$00
-    BNE print
 
-hello
-    .byte 72
-    .byte 69
-    .byte 76
-    .byte 76
-    .byte 32
-    .byte 87
-    .byte 79
-    .byte 82
-    .byte 76
-    .byte 68
-    .byte 0
-
-hexdump: 
-A2 00 BD 0D 00 8D FF 00
-E8 C9 00 D0 F5 48 45 4C
-4C 20 57 4F 52 4C 44 00
 </pre>
-<input type="button" value="load" onclick="CPU6502.burn([0xA2, 0x00, 0xBD, 0x0D, 0x00, 0x8D, 0xFF, 0x00, 0xE8, 0xC9, 0x00, 0xD0, 0xF5, 0x00, 0x48, 0x45, 0x4C, 0x4C, 0x20, 0x57, 0x4F, 0x52, 0x4C, 0x44, 0x00], 0);"><br>
+<input type="button" value="load" onclick="CPU6502.burn([0xa9, 0xfa, 0x2a  ], 0);"><br>
 <input type="button" value="run" onclick="CPU6502.run();"><br>
 <input type="button" value="reset" onclick="CPU6502.reset();"><br>
 <input type="checkbox" onclick="CheckDebugMode(this);" /><br>
 <pre id='registers'></pre>
+<pre id='memory'></pre>
 </body>
 </html>
