Code generation added

--- a/asm.html
+++ b/asm.html
@@ -5,12 +5,8 @@
 </head>
 <body>
 <pre id="code">
-sta ($10,x)
-sta ($40), y
-sta ($5000)
-sta (FOO)
-sta (BAR, x)
-sta (LOO), y
+hello 
+.word $480, $990, $320
 </pre>
 <input type="button" value="assemble" onclick="assemble();" />
 <script type="text/javascript" src="js/6502-assembler.js"></script>
