Assembler is outputting valid oc

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <pre>
 
 </pre>
-<input type="button" value="load" onclick="CPU6502.burn([0xa9, 0xfa, 0x2a  ], 0);"><br>
+<input type="button" value="load" onclick="CPU6502.burn([0xA2 , 0x00 , 0xAD , 0x11 , 0x00 , 0x9D , 0x56 , 0xE4 , 0xE8 , 0xBD , 0x11 , 0x00 , 0xC9 , 0x00 , 0xD0 , 0xF5 , 0x00 , 0x48 , 0x65 , 0x6C , 0x6C , 0x6F , 0x20 , 0x57 , 0x6F , 0x72 , 0x6C , 0x64 , 0x21 , 0x00 ], 0);"><br>
 <input type="button" value="run" onclick="CPU6502.run();"><br>
 <input type="button" value="reset" onclick="CPU6502.reset();"><br>
 <input type="checkbox" onclick="CheckDebugMode(this);" /><br>
