--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
         <script type="text/javascript" src="js/6502-assembler.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
         <script type="text/javascript" src="js/canvas.js"></script>
+        <script type="text/javascript" src="js/input.js"></script>
         <link href='//fonts.googleapis.com/css?family=VT323' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/style.css" type="text/css" />
     </head>
     <body>
         <div id="wrapper" class="center">
             <div id="canvas-cotainer">
-                <canvas id="canvas" width="32" height="32"></canvas>
+                <canvas id="canvas" width="32" height="32" tabindex=1></canvas>
             </div>
             <!-- Editor Start -->
             <div id="editor-container">
