--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <body>
         <div id="wrapper" class="center">
             <div id="canvas-cotainer">
-                <canvas id="canvas" width="32" height="32" tabindex=1></canvas>
+                <canvas id="canvas" width="320" height="320" tabindex=1></canvas>
             </div>
             <!-- Editor Start -->
             <div id="editor-container">
@@ -48,7 +48,7 @@
                 <div id="buttons">
                     <input id="btn-asm" class="button" type="button" value="ASM" />
                     <input id="btn-run" class="button" type="button" value="RUN" />
-                    <input id="btn-pause" class="button" type="button" value="PAUSE"/>
+                    <input id="btn-pause" class="button" type="button" value="STOP"/>
                     <input id="btn-reset" class="button" type="button" value="RESET" />
                     <input id="btn-step" class="button" type="button" value="STEP" />
                     <input id="btn-dump" class="button" type="button" value="OBJ" />
