Added repo link

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <link rel="stylesheet" href="css/style.css" type="text/css" />
     </head>
     <body>
+        <div>
+            Source Code at <a href="https://github.com/damnbrain/6502.js">GitHub</a>
+        </div>
         <div id="wrapper" class="center">
             <div id="canvas-cotainer">
                 <canvas id="canvas" width="320" height="320" tabindex=1></canvas>
@@ -99,6 +102,8 @@ HELLO
                 </div>
                 <!-- Object Code Dump End -->
             </div>
+            
         </div>
+       
     </body>
 </html>
