Fix RTS JSR and move Stack address from 0x01FF to 0xF1FF

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <link rel="stylesheet" href="css/style.css" type="text/css" />
     </head>
     <body>
-        <div>
+        <div style="color:#fff;">
             Source Code at <a href="https://github.com/damnbrain/6502.js">GitHub</a>
         </div>
         <div id="wrapper" class="center">
