--- a/index.html
+++ b/index.html
@@ -99,6 +99,6 @@ HELLO
             </div>
             
         </div>
-       <div id="footer">&copy; 2015 Felipe Alfonso - <a href="https://github.com/damnbrain/6502.js" target="_blank">Source</a></div>
+       <div id="footer">&copy; 2015 Felipe Alfonso - <a href="https://github.com/damnbrain/6502.js" target="_blank">Source</a> | <a onclick="showSpecsPopup();" href="#">Emulator Specs</a></div>
     </body>
 </html>
