--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@ HELLO:
 				<!-- Debug End-->
 				<!-- Object Code Dump Start -->
 				<div id="objcode-dump">
-					<div style="text-align: center;">Object Code</div>
-					<pre id="object-output" onclick="this.select();"></pre>
+					<div style="text-align: left; margin-left:120px;">Object Code<br>Size:<div id='size'>0 BYTES</div></input>
+					<pre id="object-output"></pre>
 				</div>
 				<!-- Object Code Dump End -->
 			</div>
