--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 		<script type="text/javascript" src="js/input.js"></script>
 		<link href='//fonts.googleapis.com/css?family=VT323' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="css/style.css" type="text/css" />
+		<link rel="image_src" href="http://damnbrain.com/dev/6502/screen.png" />
 	</head>
 	<body>
 		<div id="wrapper" class="center">
