--- a/index.html
+++ b/index.html
@@ -105,6 +105,6 @@ HELLO:
 			</div>
 			
 		</div>
-	   <div id="footer">&copy; 2015 - 2016 Felipe Alfonso - <a href="https://github.com/damnbrain/JS6502" target="_blank">Source</a> | <a onclick="showSpecsPopup();" href="#">Emulator Specs</a></div>
+	   <div id="footer">&copy; 2015 - 2016 Felipe Alfonso - <a href="https://github.com/vptr/JS6502" target="_blank">Source</a> | <a onclick="showSpecsPopup();" href="#">Emulator Specs</a></div>
 	</body>
 </html>
