--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@ HELLO:
 				<input id="btn-debug" type="checkbox" checked="true" /><br>
 			</div>
 			<br>
+			<input type="file" value="Load Source" id="file-input" />
+			<p>
 			<!-- Editor End-->
 			<div id="debug">
 				 <!-- Debug Start-->
